[gd_scene load_steps=38 format=4 uid="uid://35ca40121s4p"]

[ext_resource type="Script" uid="uid://o8fla63cdgq5" path="res://Scripts/Act1/a_1_level1.gd" id="1_uv8do"]
[ext_resource type="Texture2D" uid="uid://dd0bog12ylhre" path="res://Assets/Tileset/stringstar fields/tileset.png" id="1_xfk5q"]
[ext_resource type="Texture2D" uid="uid://53kwec1qlop0" path="res://Assets/Tileset/stringstar fields/background_0.png" id="2_7p6j4"]
[ext_resource type="Texture2D" uid="uid://c6peuwj2qw0a2" path="res://Assets/Tileset/ground-tileset.png" id="2_6444e"]
[ext_resource type="Texture2D" uid="uid://bsgco4vtcdr5" path="res://Assets/Tileset/stringstar fields/background_2.png" id="3_6444e"]
[ext_resource type="PackedScene" uid="uid://b64lmhekn55ha" path="res://Scenes/mainCharacterScene.tscn" id="4_7p6j4"]
[ext_resource type="Script" uid="uid://bu5ix0unn60nu" path="res://Scripts/movingBackground.gd" id="5_evi0p"]
[ext_resource type="Script" uid="uid://bsc12nyy18s8l" path="res://Scripts/Act1/camera_component.gd" id="7_ct4jx"]
[ext_resource type="Script" uid="uid://foiq3mmsty74" path="res://Scripts/viewport_component.gd" id="8_uv8do"]
[ext_resource type="Script" uid="uid://ccvnjj3662ykj" path="res://Scripts/transition_component.gd" id="10_4t5sc"]
[ext_resource type="Script" uid="uid://cntmen24fr7mv" path="res://Scripts/Act1/level_end_componenta1l1.gd" id="10_b6bbv"]
[ext_resource type="PackedScene" uid="uid://coe588ewmrvn3" path="res://Scripts/upgrade_stations.tscn" id="11_2yoyw"]
[ext_resource type="PackedScene" uid="uid://c2o4rnmp125cq" path="res://Scenes/coinScene.tscn" id="12_b6bbv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_207y8"]
friction = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ct4jx"]
resource_name = "BaseTileSet"
texture = ExtResource("1_xfk5q")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
2:6/0 = 0
3:6/0 = 0
3:5/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0
1:6/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
16:8/0 = 0
15:8/0 = 0
14:8/0 = 0
13:8/0 = 0
12:8/0 = 0
11:8/0 = 0
10:8/0 = 0
9:8/0 = 0
8:8/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
11:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4t5sc"]
texture = ExtResource("2_6444e")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:0/0 = 0
1:2/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:2/0 = 0
3:2/0 = 0
3:3/0 = 0
4:3/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
6:3/0 = 0
6:2/0 = 0
6:0/0 = 0
5:0/0 = 0
5:1/0 = 0
6:1/0 = 0
4:1/0 = 0
3:0/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_ilcil"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_207y8")
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_ct4jx")
sources/1 = SubResource("TileSetAtlasSource_4t5sc")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6444e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6444e"]
size = Vector2(12.0001, 282)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_chwpn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_af3po"]
size = Vector2(19.9999, 93)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uy8f0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6r07y"]
size = Vector2(115, 20)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6ioyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oovug"]
size = Vector2(164, 20)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8i23i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yhm2"]
size = Vector2(235, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsmp6"]
size = Vector2(21, 192)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pjppf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yltlr"]
size = Vector2(21, 118)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_7p6j4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6bbv"]
size = Vector2(20, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yoyw"]
size = Vector2(2104, 29.5)

[sub_resource type="Animation" id="Animation_2yoyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uv8do"]
resource_name = "fade_in"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b6bbv"]
resource_name = "fade_out"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2yoyw"]
_data = {
&"RESET": SubResource("Animation_2yoyw"),
&"fade_in": SubResource("Animation_uv8do"),
&"fade_out": SubResource("Animation_b6bbv")
}

[node name="Level1" type="Node2D"]
script = ExtResource("1_uv8do")
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -250)
scale = Vector2(1.5, 1.5)
tile_map_data = PackedByteArray("AAAEACQAAAANAAkAAAAFACQAAAANAAkAAAAGACQAAAAAAAkAAAAHACQAAAAEAAkAAAAIACQAAAAEAAkAAAAJACQAAAAEAAkAAAAKACQAAAAEAAkAAAALACQAAAAEAAkAAAAEACMAAAABAAkAAAAFACMAAAABAAkAAAAGACMAAAABAAkAAAAMACQAAAAEAAkAAAAHACMAAAABAAkAAAAIACMAAAAIAAkAAAAJACMAAAAJAAkAAAAKACMAAAAKAAkAAAAMACMAAAABAAkAAAAAACQAAAANAAkAAAABACQAAAANAAkAAAACACQAAAANAAkAAAADACQAAAANAAkAAAALACMAAAABAAkAAAABACMAAAABAAkAAAACACMAAAABAAkAAAAAACMAAAABAAkAAAADACMAAAABAAkAAAANACMAAAAMAAkAAAAPACMAAAAMAAkAAAAOACMAAAANAAkAAAAQACMAAAANAAkAAAARACMAAAAOAAkAAAAPACIAAAAMAAgAAAAQACIAAAANAAgAAAARACIAAAAOAAgAAAASACIAAAAPAAgAAAATACIAAAAQAAgAAAASACMAAAAPAAkAAAATACMAAAAQAAkAAAAUACMAAAARAAkAAAARACEAAAAOAAcAAAASACEAAAAPAAcAAAARACAAAAAOAAYAAAARAB8AAAAOAAUAAAASACAAAAAPAAYAAAASAB8AAAAPAAUAAAARAB4AAAAOAAQAAAASAB4AAAAPAAQAAAAQACAAAAANAAYAAAAQAB8AAAANAAUAAAAQAB4AAAANAAQAAAAPAB4AAAAMAAQAAAAPAB8AAAAMAAUAAAARAB0AAAAOAAMAAAAQAB0AAAANAAMAAAAPAB0AAAAMAAMAAAAOAB0AAAALAAMAAAASAB0AAAAPAAMAAAATAB4AAAAQAAQAAAATAB0AAAAQAAMAAAAUAB0AAAARAAMAAAAUABwAAAARAAIAAAATABwAAAAQAAIAAAASABwAAAAPAAIAAAARABwAAAAOAAIAAAAQABwAAAANAAIAAAAPABwAAAAMAAIAAAAOABwAAAALAAIAAAAPABsAAAAMAAEAAAAQABsAAAANAAEAAAARABsAAAAOAAEAAAASABsAAAAPAAEAAAATABsAAAAQAAEAAAASABoAAAAPAAAAAAARABoAAAAOAAAAAAAQABoAAAANAAAAAAAVACMAAAAFAAkAAAAWACMAAAAGAAkAAAAXACMAAAAHAAkAAAAVACIAAAAFAAgAAAAWACIAAAAGAAgAAAAXACIAAAAHAAgAAAAYACIAAAAIAAgAAAAYACMAAAAIAAkAAAAYACQAAAAGAAkAAAAXACQAAAADAAkAAAAWACQAAAACAAkAAAAVACQAAAABAAkAAAAUACQAAAAAAAoAAAATACQAAAAFAAkAAAASACQAAAAFAAkAAAAQACQAAAAFAAkAAAAZACMAAAAFAAkAAAAaACMAAAAFAAkAAAAbACMAAAAFAAkAAAAcACMAAAAFAAkAAAAdACMAAAAFAAkAAAAeACMAAAAFAAkAAAAfACMAAAAFAAkAAAAgACMAAAAFAAkAAAAhACMAAAAFAAkAAAAiACMAAAAFAAkAAAAkACMAAAAFAAkAAAAZACQAAAAFAAkAAAAaACQAAAAFAAkAAAAbACQAAAAFAAkAAAAcACQAAAAFAAkAAAAdACQAAAAFAAkAAAAeACQAAAAFAAkAAAAfACQAAAAFAAkAAAAgACQAAAAFAAkAAAAhACQAAAAFAAkAAAAiACQAAAAGAAoAAAAjACQAAAAGAAoAAAAkACQAAAAGAAoAAAAlACQAAAAGAAoAAAAjACMAAAAFAAkAAAAlACMAAAAFAAkAAAAmACMAAAAGAAoAAAAmACQAAAAGAAoAAAAnACQAAAAGAAoAAAApACQAAAAGAAoAAAAqACQAAAAGAAoAAAArACQAAAAGAAoAAAAsACQAAAAGAAoAAAAtACQAAAAGAAoAAAAuACQAAAAGAAoAAAAvACQAAAAGAAoAAAAnACMAAAAGAAoAAAApACMAAAAGAAoAAAAqACMAAAAGAAoAAAArACMAAAAGAAoAAAAsACMAAAAGAAoAAAAtACMAAAAGAAoAAAAuACMAAAAGAAoAAAAvACMAAAAGAAoAAAAAABsAAAAAAAIAAAABABsAAAABAAIAAAACABsAAAACAAIAAAACABwAAAACAAMAAAACAB0AAAACAAQAAAAAABwAAAAAAAMAAAAIACIAAAABAAQAAAABACIAAAADAAQAAAACACIAAAAEAAQAAAABACEAAAADAAMAAAACACEAAAAEAAMAAAAtACIAAQADAAMAAAAtACEAAQADAAEAAAAtACAAAQADAAEAAAAtAB8AAQADAAIAAAAtAB4AAQADAAIAAAAtAB0AAQADAAEAAAAtABwAAQADAAIAAAAtABsAAQADAAEAAAAtABoAAQADAAEAAAAoAB8AAQAAAAIAAAAoAB0AAQAAAAEAAAAoAB4AAQAAAAEAAAAoABwAAQAAAAEAAAAoABsAAQAAAAEAAAAoABoAAQAAAAEAAAAoABkAAQAEAAEAAAAoABgAAQAAAAAAAAAtABkAAQADAAEAAAAtABgAAQADAAEAAAAtABcAAQADAAAAAAAlABgAAQAEAAEAAAAkABgAAQAEAAEAAAAjABgAAQAEAAEAAAAiABgAAQAEAAEAAAAhABgAAQAEAAEAAAAeABYAAQAEAAEAAAAdABYAAQAEAAEAAAAcABYAAQAEAAEAAAAbABYAAQAEAAEAAAAaABYAAQAEAAEAAAAZABYAAQAEAAEAAAAYABYAAQAEAAEAAAAjABMAAQAEAAEAAAAjABIAAQAEAAEAAAAjABEAAQAEAAEAAAAjABAAAQAEAAEAAAAgABEAAQAEAAEAAAAgABAAAQAEAAEAAAAgAA8AAQAEAAEAAAAgAA4AAQAEAAEAAAAgAA0AAQAEAAEAAAAmAA4AAQAEAAEAAAAnAA4AAQAEAAEAAAAoAA4AAQAEAAEAAAApAA4AAQAEAAEAAAAqAA4AAQAEAAEAAAArAA4AAQAEAAEAAAAsAA4AAQAEAAEAAAAtAA4AAQAEAAEAAAAuAA4AAQAEAAEAAAAvAA4AAQAEAAEAAAAsAB4AAQACAAIAAAAsAB8AAQACAAIAAAAsACAAAQACAAIAAAAsACEAAQACAAIAAAAsAB0AAQACAAIAAAAsABwAAQACAAIAAAAsABsAAQACAAIAAAAsABoAAQACAAIAAAAsABkAAQACAAIAAAAsABgAAQACAAIAAAArABgAAQACAAEAAAArABkAAQACAAEAAAArABoAAQACAAEAAAArABsAAQACAAEAAAArABwAAQACAAEAAAArAB0AAQACAAEAAAArAB4AAQACAAEAAAArAB8AAQACAAEAAAArACAAAQACAAEAAAAqABgAAQACAAEAAAAqABkAAQACAAEAAAAqABoAAQACAAEAAAAqABsAAQACAAEAAAAqABwAAQACAAEAAAAqAB0AAQACAAEAAAAqAB4AAQACAAEAAAAqAB8AAQACAAEAAAAqACAAAQACAAEAAAAqACEAAQAGAAIAAAArACEAAQACAAEAAAAsACIAAQACAAEAAAArACIAAQACAAEAAAAqACIAAQAGAAMAAAApABgAAQABAAEAAAApABkAAQABAAEAAAApABoAAQABAAEAAAApABsAAQABAAEAAAApABwAAQABAAEAAAApAB0AAQABAAEAAAApAB4AAQABAAEAAAApAB8AAQABAAEAAAApACAAAQABAAEAAAAoACMAAAAGAAoAAAApACEAAQAFAAIAAAApACIAAQAFAAMAAAAoACQAAAAGAAoAAAA=")
tile_set = SubResource("TileSet_ilcil")
metadata/_edit_lock_ = true

[node name="Visual" type="Node" parent="."]

[node name="ViewportComponent" type="Node2D" parent="Visual" node_paths=PackedStringArray("texture_rect")]
script = ExtResource("8_uv8do")
texture_rect = NodePath("../StartingZone/TextureRect")
metadata/_edit_lock_ = true

[node name="StartingZone" type="CanvasLayer" parent="Visual"]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Visual/StartingZone"]
modulate = Color(0.342475, 0.23389, 0.187533, 1)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7p6j4")
metadata/_edit_lock_ = true

[node name="Background2" type="Sprite2D" parent="Visual"]
modulate = Color(0, 1, 0.627451, 0.627451)
position = Vector2(576.463, 537)
scale = Vector2(4.0171, 1.23428)
texture = ExtResource("3_6444e")
script = ExtResource("5_evi0p")
metadata/_edit_lock_ = true

[node name="CameraComponent" type="Node" parent="Visual" node_paths=PackedStringArray("cam", "anchor", "vp_c")]
script = ExtResource("7_ct4jx")
cam = NodePath("PlayerCamera")
anchor = NodePath("../../Player/MC")
vp_c = NodePath("../ViewportComponent")

[node name="PlayerCamera" type="Camera2D" parent="Visual/CameraComponent"]
position = Vector2(576.03, 322)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
position_smoothing_enabled = true
position_smoothing_speed = 1.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
metadata/_edit_lock_ = true

[node name="Player" type="Node" parent="."]

[node name="MC" parent="Player" instance=ExtResource("4_7p6j4")]
position = Vector2(99, 562)

[node name="PlatformObjects" type="Node" parent="."]

[node name="right_wall" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(1088, 492)
rotation = -3.14159
physics_material_override = SubResource("PhysicsMaterial_6444e")
metadata/_edit_lock_ = true

[node name="right_collide" type="CollisionShape2D" parent="PlatformObjects/right_wall"]
position = Vector2(-3.99988, 48.0001)
shape = SubResource("RectangleShape2D_6444e")
metadata/_edit_lock_ = true

[node name="right_wall2" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(849, 219)
rotation = -3.14159
physics_material_override = SubResource("PhysicsMaterial_chwpn")
metadata/_edit_lock_ = true

[node name="right_collide" type="CollisionShape2D" parent="PlatformObjects/right_wall2"]
position = Vector2(-3, 37.5)
shape = SubResource("RectangleShape2D_af3po")
metadata/_edit_lock_ = true

[node name="Platform" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(854, 342)
physics_material_override = SubResource("PhysicsMaterial_uy8f0")
metadata/_edit_lock_ = true

[node name="platform_collide1" type="CollisionShape2D" parent="PlatformObjects/Platform"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_6r07y")
metadata/_edit_lock_ = true

[node name="Platform2" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(665, 292)
physics_material_override = SubResource("PhysicsMaterial_6ioyp")
metadata/_edit_lock_ = true

[node name="platform_collide2" type="CollisionShape2D" parent="PlatformObjects/Platform2"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_oovug")
metadata/_edit_lock_ = true

[node name="Platform3" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(1023, 99)
physics_material_override = SubResource("PhysicsMaterial_8i23i")
metadata/_edit_lock_ = true

[node name="platform_collide3" type="CollisionShape2D" parent="PlatformObjects/Platform3"]
position = Vector2(8.5, 0)
shape = SubResource("RectangleShape2D_8yhm2")
metadata/_edit_lock_ = true

[node name="left_wall" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(970, 426)
metadata/_edit_lock_ = true

[node name="left_collide" type="CollisionShape2D" parent="PlatformObjects/left_wall"]
position = Vector2(0.5, -3)
shape = SubResource("RectangleShape2D_lsmp6")
metadata/_edit_lock_ = true

[node name="left_wall2" type="StaticBody2D" parent="PlatformObjects"]
position = Vector2(779, 127)
physics_material_override = SubResource("PhysicsMaterial_pjppf")
metadata/_edit_lock_ = true

[node name="left_collide" type="CollisionShape2D" parent="PlatformObjects/left_wall2"]
position = Vector2(0.5, -4)
shape = SubResource("RectangleShape2D_yltlr")
metadata/_edit_lock_ = true

[node name="Nav" type="Node" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Nav"]
navigation_polygon = SubResource("NavigationPolygon_7p6j4")
metadata/_edit_lock_ = true

[node name="LevelEndComponent" type="Node" parent="." node_paths=PackedStringArray("t_comp", "player")]
script = ExtResource("10_b6bbv")
t_comp = NodePath("../TransitionComponent")
player = NodePath("../Player/MC")

[node name="Area2D" type="Area2D" parent="LevelEndComponent"]
position = Vector2(1141, 47)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEndComponent/Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_b6bbv")
metadata/_edit_lock_ = true

[node name="level_floor" type="Area2D" parent="LevelEndComponent"]
position = Vector2(600, 660)

[node name="floor_collide" type="CollisionShape2D" parent="LevelEndComponent/level_floor"]
shape = SubResource("RectangleShape2D_2yoyw")

[node name="upgrade_stations" parent="LevelEndComponent/level_floor" instance=ExtResource("11_2yoyw")]
position = Vector2(57, -93)
upgrade = "visual"

[node name="TransitionComponent" type="Node" parent="." node_paths=PackedStringArray("transition_control", "animation_player")]
script = ExtResource("10_4t5sc")
transition_control = NodePath("CanvasLayer/ColorRect")
animation_player = NodePath("CanvasLayer/AnimationPlayer")

[node name="CanvasLayer" type="CanvasLayer" parent="TransitionComponent"]

[node name="ColorRect" type="ColorRect" parent="TransitionComponent/CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0, 0.278431, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionComponent/CanvasLayer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_2yoyw")
}

[node name="LevelSound" type="AudioStreamPlayer" parent="."]

[node name="Coin" parent="." instance=ExtResource("12_b6bbv")]
position = Vector2(325, 574)

[node name="Coin2" parent="." instance=ExtResource("12_b6bbv")]
position = Vector2(499, 568)

[node name="Coin3" parent="." instance=ExtResource("12_b6bbv")]
position = Vector2(700, 252)

[connection signal="change_level" from="LevelEndComponent" to="." method="_on_level_end_component_change_level"]
[connection signal="body_entered" from="LevelEndComponent/Area2D" to="LevelEndComponent" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LevelEndComponent/level_floor" to="LevelEndComponent" method="_on_level_floor_body_entered"]
